# computer-game

./: .gitignore  .gitmodules  CMakeLists.txt
.github/ISSUE_TEMPLATE/: enhancement.md
assets/: characters.data  entities.data
assets/maps/: dungeon.atlas  test.atlas
src/: CMakeLists.txt  Install.cmake  main.cpp  testVendors.cpp
src/Engine/: Actions.cpp  Actions.hpp  Animation.cpp  Animation.hpp  Application.cpp  Application.hpp  Atlas.cpp  Atlas.hpp  Bitmask.cpp  Bitmask.hpp  CMakeLists.txt  Character.cpp  Character.hpp  EmptyState.hpp  Entity.cpp  Entity.hpp  EntityDef.hpp  IState.hpp  Input.cpp  Input.hpp  Map.cpp  Map.hpp  StateMachine.cpp  StateMachine.hpp  StateStack.cpp  StateStack.hpp  Trigger.hpp  Tween.cpp  Tween.hpp  Window.cpp  Window.hpp  trigger.hpp
src/Game/: Application.cpp  Application.hpp  CMakeLists.txt  Character.hpp  ComputerGame.cpp  ComputerGame.hpp  EntityData.hpp  InputActions.hpp
src/Game/Maps/: TestMap.hpp
src/Game/States/: EmptyState.hpp  MoveState.cpp  MoveState.hpp  NPCStandState.hpp  TestState.cpp  TestState.hpp  WaitState.hpp  temp.hpp
src/Game/States/Character/: MoveState.cpp  MoveState.hpp  NPCStandState.hpp  PlanStrollState.hpp  WaitState.hpp
src/Traits/: CMakeLists.txt  Constant.hpp  Helper.cpp  Helper.hpp  Log.cpp  Log.hpp
tools/: TweenTester.cpp
